--- a/calico-enterprise/multicluster/federation/kubeconfig.mdx
+++ b/calico-enterprise/multicluster/federation/kubeconfig.mdx
@@ -186,7 +186,7 @@ In this setup, the cluster mesh will be configured to meet the pod IP routabilit
       --from-file=kubeconfig=<kubeconfig file>
    ```
 
-1. If RBAC is enabled in cluster A, create a Role and RoleBinding that {{prodname}} will use to access the secret that contains the kubeconfig for cluster B:
+1. If RBAC is enabled in cluster A, create a Role and RoleBinding for {{prodname}} to use to access the secret that contains the kubeconfig for cluster B:
    ```bash
    kubectl create -f - <<EOF
    apiVersion: rbac.authorization.k8s.io/v1
@@ -258,7 +258,7 @@ In this setup, the cluster mesh will rely on the [underlying network](#other-net
       --from-file=kubeconfig=<kubeconfig file>
    ```
 
-1. If RBAC is enabled in cluster A, create a Role and RoleBinding that {{prodname}} will use to access the secret that contains the kubeconfig for cluster B:
+1. If RBAC is enabled in cluster A, create a Role and RoleBinding for {{prodname}} to use to access the secret that contains the kubeconfig for cluster B:
    ```bash
    kubectl create -f - <<EOF
    apiVersion: rbac.authorization.k8s.io/v1
@@ -308,7 +308,7 @@ In this setup, the cluster mesh will rely on the [underlying network](#other-net
 
 1. If you have no IP pools in cluster A with NAT-outgoing enabled, skip this step.
 
-   Otherwise, if you have IP pools in cluster A with NAT-outgoing enabled and workloads in that pool will egress to workloads in cluster B, you need to instruct {{prodname}} to not perform NAT on traffic destined for IP pools in cluster B.
+   Otherwise, if you have IP pools in cluster A with NAT-outgoing enabled, and workloads in that pool will egress to workloads in cluster B, you need to instruct {{prodname}} to not perform NAT on traffic destined for IP pools in cluster B.
 
    You can achieve this by creating a disabled IP pool in cluster A for each CIDR in cluster B. This IP pool should have NAT-outgoing disabled. For example:
 
@@ -337,17 +337,17 @@ After completing the above steps for all cluster pairs in the cluster mesh, your
 :::
 
 ### Switch to multi-cluster networking
-The steps above assume that you are configuring federated endpoint identity and multi-cluster networking for the first time. If you already have federated endpoint identity and are looking to utilize multi-cluster networking, the steps below outline the changes that must be made if you had previously set up federated endpoint identity prior to the introduction of multi-cluster networking:
+The steps above assume that you are configuring both federated endpoint identity and multi-cluster networking for the first time. If you already have federated endpoint identity, and want to use multi-cluster networking, follow these steps:
 
 1. Validate that all [requirements](#calico-enterprise-multi-cluster-networking) for multi-cluster networking have been met.
 2. Update the ClusterRole in each cluster in the cluster mesh using the RBAC manifest found in [Create kubeconfig files](#create-kubeconfig-files)
-3. Update all RemoteClusterConfigurations to set `Spec.OverlayRoutingMode` to `Enabled`
-4. Ensure that all RemoteClusterConfigurations are bidirectional, i.e. ensure that RemoteClusterConfigurations were established following the [instructions](#create-remoteclusterconfigurations) for in both directions for each cluster pair.
+3. In all RemoteClusterConfigurations, set `Spec.OverlayRoutingMode` to `Enabled`.
+4. Verify that all RemoteClusterConfigurations are bidirectional (in both directions for each cluster pair) using these [instructions](#create-remoteclusterconfigurations).
 5. If you had previously created disabled IP pools to prevent NAT outgoing from applying to remote cluster destinations, those disabled IP pools are no longer needed when using multi-cluster networking and must be deleted.
 
 
 ### Validate federated endpoint identity & multi-cluster networking
-#### Validate RemoteClusterConfiguration & federated endpoint identity
+#### Validate RemoteClusterConfiguration and federated endpoint identity
 ##### Check remote cluster connection
 You can validate in a local cluster that Typha has synced to the remote cluster through the [Prometheus metrics for Typha](../../reference/component-resources/typha/prometheus#metric-reference).
 
@@ -391,7 +391,7 @@ spec:
 ```
 
 ### Troubleshoot
-#### Troubleshoot RemoteClusterConfiguration & federated endpoint identity
+#### Troubleshoot RemoteClusterConfiguration and federated endpoint identity
 
 ##### Verify configuration
 For each impacted remote cluster pair (between cluster A and cluster B):
@@ -412,7 +412,7 @@ For each impacted remote cluster pair (between cluster A and cluster B):
 
     If you do not see the nodes of cluster B listed in response to the command above, verify that you [created](#create-kubeconfig-files) the kubeconfig for cluster B correctly, and that you [stored](#create-remoteclusterconfigurations) it in cluster A correctly.
 
-    If you do see the nodes of cluster B listed in response to the command above, you may wish to run this test (or a similar test) on a node in cluster A to verify that cluster A nodes can connect to the API server of cluster B.
+    If you do see the nodes of cluster B listed in response to the command above, you can run this test (or a similar test) on a node in cluster A to verify that cluster A nodes can connect to the API server of cluster B.
 
 2. Validate that the Typha service account in Cluster A is authorized to retrieve the kubeconfig secret for cluster B.
    ```bash
@@ -424,7 +424,7 @@ For each impacted remote cluster pair (between cluster A and cluster B):
     yes
     ```
 
-    If the command does not return this output, verify that you [configured RBAC](#create-remoteclusterconfigurations) in cluster A correctly
+    If the command does not return this output, verify that you correctly [configured RBAC](#create-remoteclusterconfigurations) in cluster A.
 
 3. Repeat the above, switching cluster A to cluster B.
 
@@ -432,7 +432,7 @@ For each impacted remote cluster pair (between cluster A and cluster B):
 ##### Check logs
 Validate that querying Typha logs yield the expected result outlined in the [validation](#validate-federated-endpoint-identity--multi-cluster-networking) section.
 
-If the Typha logs do not yield the expected result, warning or error related logs in `typha` or `calico-node` may provide insight into where issues are occurring.
+If the Typha logs do not yield the expected result, review the warning or error-related logs in `typha` or `calico-node` for insights.
 
 
 ###### calicoq
@@ -454,16 +454,16 @@ If this command fails, the error messages returned by the command may provide in
 
 #### Troubleshoot multi-cluster networking
 ##### Basic validation
-* Ensure that RemoteClusterConfiguration and federated endpoint identity are [functioning correctly](#validate-federated-endpoint-identity--multi-cluster-networking).
-* Verify that you have met all of the [prerequisites](#calico-enterprise-multi-cluster-networking) for multi-cluster networking to be established.
-* If you had previously setup RemoteClusterConfigurations without multi-cluster networking and are upgrading to use the feature, review the [switching considerations](#switch-to-multi-cluster-networking).
-* Verify that traffic between clusters is not being denied by network policy.
+* Ensure that RemoteClusterConfiguration and federated endpoint identity are [functioning correctly](#validate-federated-endpoint-identity--multi-cluster-networking)
+* Verify that you have met the [prerequisites](#calico-enterprise-multi-cluster-networking) for multi-cluster networking
+* If you had previously set up RemoteClusterConfigurations without multi-cluster networking, and are upgrading to use the feature, review the [switching considerations](#switch-to-multi-cluster-networking)
+* Verify that traffic between clusters is not being denied by network policy
 
 ##### Check overlayRoutingMode
 Ensure that `overlayRoutingMode` is set to `"Enabled"` on all RemoteClusterConfigurations.
 
 If overlay routing is successfully enabled, you can view the logs of a Typha instance using:
-```
+```bash
 kubectl logs deployment/calico-typha -n calico-system
 ```
 
@@ -482,7 +482,7 @@ If you do not see the each of the resource types above, overlay routing was not 
 
 
 ###### Check logs
-Warning or error related logs in `typha` or `calico-node` may provide insight into where issues are occurring.
+Warning or error logs in `typha` or `calico-node` may provide insight into where issues are occurring.
 
 ## Next steps
 
