--- a/calico_versioned_docs/version-3.27/operations/upgrading/kubernetes-upgrade.mdx
+++ b/calico_versioned_docs/version-3.27/operations/upgrading/kubernetes-upgrade.mdx
@@ -56,7 +56,7 @@ ownership of the helm resources to the new chart location.
 1. Apply the {{version}} CRDs:
 
    ```bash
-   kubectl apply --server-side --force-conflicts -f {{manifestsURL}}/manifests/operator-crds.yaml
+   kubectl apply --server-side --force-conflicts -f {{manifestsUrl}}/manifests/operator-crds.yaml
    ```
 
 1. Install the helm chart in the `tigera-operator` namespace.
@@ -83,7 +83,7 @@ the output and then re-running the command without --dry-run to commit to the ch
 1. Apply the {{version}} CRDs:
 
    ```bash
-   kubectl apply --server-side --force-conflicts -f {{manifestsURL}}/manifests/operator-crds.yaml
+   kubectl apply --server-side --force-conflicts -f {{manifestsUrl}}/manifests/operator-crds.yaml
    ```
 
 1. Run the helm upgrade:
@@ -113,19 +113,19 @@ the output and then re-running the command without --dry-run to commit to the ch
    **{{prodname}} for policy and networking**
 
    ```bash
-   curl {{manifestsURL}}/manifests/calico.yaml -o upgrade.yaml
+   curl {{manifestsUrl}}/manifests/calico.yaml -o upgrade.yaml
    ```
 
    **{{prodname}} for policy and flannel for networking**
 
    ```bash
-   curl {{manifestsURL}}/manifests/canal.yaml -o upgrade.yaml
+   curl {{manifestsUrl}}/manifests/canal.yaml -o upgrade.yaml
    ```
 
    **{{prodname}} for policy (advanced)**
 
    ```bash
-   curl {{manifestsURL}}/manifests/calico-policy-only.yaml -o upgrade.yaml
+   curl {{manifestsUrl}}/manifests/calico-policy-only.yaml -o upgrade.yaml
    ```
 
    :::note
