--- a/calico_versioned_docs/version-3.26/reference/host-endpoints/failsafe.mdx
+++ b/calico_versioned_docs/version-3.26/reference/host-endpoints/failsafe.mdx
@@ -19,6 +19,7 @@ By default, {{prodname}} keeps the following ports open on _all_ host endpoints:
 | 179  | TCP      | Inbound & Outbound | BGP access (Calico networking)  |
 | 2379 | TCP      | Inbound & Outbound | etcd access                     |
 | 2380 | TCP      | Inbound & Outbound | etcd access                     |
+| 5473 | TCP      | Inbound & Outbound | etcd access                     |
 | 6443 | TCP      | Inbound & Outbound | Kubernetes API server access    |
 | 6666 | TCP      | Inbound & Outbound | etcd self-hosted service access |
 | 6667 | TCP      | Inbound & Outbound | etcd self-hosted service access |
