--- a/calico-enterprise_versioned_docs/version-3.19-1/release-notes/index.mdx
+++ b/calico-enterprise_versioned_docs/version-3.19-1/release-notes/index.mdx
@@ -21,7 +21,11 @@ Learn about the new features, bug fixes, and other updates in this release of {{
 We’ve updated the Felix parameter (`dest_domains`) for DNS policy to make it easy to find only domain names that the deployment actually connected to (not all the domain names that got translated to the same IP address).
 For more information, see [Flow log data types](../visibility/elastic/flow/datatypes.mdx).
 
-### Security events dashboard improvements
+### Improvements to Endpoints page in Manager UI
+
+We've updated the Endpoints page so you can view and filter for Endpoints that are associated with denied traffic and associated flow logs. Denied traffic results includes the source, destination, ports, protocols, and other key forms for metadata associated with those flows. You can then go to the Policy Board and see that the policies that have been highlighted as having denied traffic.
+
+### Improvements to Security events dashboard
 
 We've added the following improvement to the [Security events dashboard](../threat/security-event-management.mdx).
 
