--- a/calico-enterprise/network-policy/domain-based-policy.mdx
+++ b/calico-enterprise/network-policy/domain-based-policy.mdx
@@ -227,6 +227,24 @@ spec:
       destination:
         selector: color == 'red'
 ```
+:::note
+
+Newly initialized pods sometimes fail to connect to domains that are allowed by a DNS policy (staged or enforced).
+In these cases, the pod tries to connect to a domain before {{prodname}} has finished processing the DNS policy that allows the connection.
+As soon as the processing is complete, the pod is able to connect.
+
+To avoid these failed connections, you can add the following to your `FelixConfiguration` resource:
+
+```yaml
+...
+spec:
+  DNSPolicyMode: DelayDNSResponse
+...
+```
+
+For more information, see [DNSPolicyMode](../reference/resources/felixconfig#dnspolicymode).
+
+:::
 
 ## Additional resources
 
