--- a/calico-enterprise_versioned_docs/version-3.18-2/release-notes/index.mdx
+++ b/calico-enterprise_versioned_docs/version-3.18-2/release-notes/index.mdx
@@ -164,11 +164,23 @@ March 25, 2024
 
 Calico Enterprise 3.18.2 is now available. This release includes bug fixes and improvements.
 
-#### Bug fixes
+### Improvements
 
-* Bug 1
-* Bug 2
-* Bug 3
+* Reduced the validity of JSON Web Tokens issued by dex to 15 minutes (down from 24 hours).
+* Added a configurable option for `priorityClassName` to the egress gateway CRD.
+* Policy recommendation excludes OpenShift namespaces by default.
+
+### Bug fixes
+
+* Drastically increased Voltron's Kubernetes client QPS and Burst to prevent it from rate limiting itself in MCM setups.0
+* Fixed a bug that prevented Linseed from creating tokens for Intrusion Detection and DPI components in managed clusters if compliance is not enabled.
+* Fixes an issue in the operator that caused it to accumulate more memory resources over time.
+* If kube-controllers metric port is set to 0, no ingress rule will be created.
+* Security updates.
+
+### Other
+
+* FIPS mode is no longer supported.
 
 #### Updating
 
