--- a/calico-enterprise_versioned_docs/version-3.18-2/release-notes/index.mdx
+++ b/calico-enterprise_versioned_docs/version-3.18-2/release-notes/index.mdx
@@ -154,4 +154,34 @@ Calico Enterprise 3.18.1 is now available as a GA release.
 
 This release is supported for use in production.
 
+#### Updating
+
+To update an existing installation of {{prodname}} 3.18, see [Install a patch release](../getting-started/manifest-archive.mdx).
+
+### Calico Enterprise 3.18.2 bug fix update
+
+March 25, 2024
+
+Calico Enterprise 3.18.2 is now available. This release includes bug fixes and improvements.
+
+### Improvements
+
+* Reduced the validity of JSON Web Tokens issued by dex to 15 minutes (down from 24 hours).
+* Added a configurable option for `priorityClassName` to the egress gateway CRD.
+* Policy recommendation excludes OpenShift namespaces by default.
+
+### Bug fixes
+
+* Drastically increased Voltron's Kubernetes client QPS and Burst to prevent it from rate limiting itself in MCM setups.0
+* Fixed a bug that prevented Linseed from creating tokens for Intrusion Detection and DPI components in managed clusters if compliance is not enabled.
+* Fixes an issue in the operator that caused it to accumulate more memory resources over time.
+* If kube-controllers metric port is set to 0, no ingress rule will be created.
+* Security updates.
+
+### Other
+
+* FIPS mode is no longer supported.
+
+#### Updating
+
 To update an existing installation of {{prodname}} 3.18, see [Install a patch release](../getting-started/manifest-archive.mdx).
